Use Virtual Threads for async tasks